cmake_minimum_required(VERSION 3.27)
project(Proyecto_1DatosII)

set(CMAKE_CXX_STANDARD 20)

add_executable(Proyecto_1DatosII
        main.cpp
        ListaNodos.cpp
        MPointerGC.cpp
        Quicksort.cpp
        MPointer.cpp
        DoubleLinkedList.cpp
        DoubleLinkedList.h
        Quicksort.h
        BubbleSort.h
        InsertionSort.h
)
